Finished interviews, updated layout inconsistencies

--- a/proyecto-final-entrega-4/index.html
+++ b/proyecto-final-entrega-4/index.html
@@ -98,13 +98,14 @@
         </thead>
         <tbody>
           <tr>
-            <td><i>Lorena Flotte <br> (hija de 5 años)</i></td>
+            <td><i>Lorena F. <br> (hija de 5 años)</i></td>
             <td class="text-justify">La aplicación es fácil de utilizar, aún para niños pequeños. Los dibujos de los personajes son adecuados para llamar la atención de los niños. Lo único que falta trabajar es dinámicas más
               intuitivas que no involucren actividades que sean complicadas de descifrar por parte de los niños (ej. no sabía que había más árboles a la derecha).</td>
           </tr>
           <tr>
-            <td><i>Nombre</i></td>
-            <td class="text-justify">Texto</td>
+            <td><i>Mirna D. <br> (hijo de 4 años)</i></td>
+            <td class="text-justify">Falta desarrollo pero si lo que quieren es apuntar a la inclusión y diversidad, valdría la pena crear personajes de diferentes etnicidades (latino, afroamericano, asiático, etc.), para que se puedan
+              familiarizar con personas diferentes a ellos. Creo que sería una buena idea incluir retroalimentación auditiva con cada acción correcta o incorrecta que haga el niño. </td>
           </tr>
         </tbody>
       </table>
@@ -121,13 +122,14 @@
         </thead>
         <tbody>
           <tr>
-            <td><i>Mauricio Alcérreca</i></td>
+            <td><i>Mauricio A.</i></td>
             <td class="text-justify">Le gusta el prototipo, y piensa que los dibujos animados son muy buenos. Argumenta que las dinámicas todavía están en etapa temprana y que no dan el mensaje que queremos todavía, pero que con el desarrollo se
               arregla. Cree controles son sencillos, ideales para niños de corta edad.</td>
           </tr>
           <tr>
             <td><i>Ana Paula</i></td>
-            <td class="text-justify">Considera que es muy buen prototipo, le gustaron las imágenes y cree que el contenido es bueno para los niños. Aun así, comenta que en algunas partes del videojuego no es tan claro cómo se debe jugar o cómo se puede mover el usuario de una pantalla a otra.</td>
+            <td class="text-justify">Considera que es muy buen prototipo, le gustaron las imágenes y cree que el contenido es bueno para los niños. Aun así, comenta que en algunas partes del videojuego no es tan claro cómo se debe jugar o cómo se
+              puede mover el usuario de una pantalla a otra.</td>
           </tr>
         </tbody>
       </table>
@@ -143,12 +145,12 @@
       <br>
       <div class="row">
         <div class="col-md-12">
-          <p>Para desarrollar este segundo prototipo se hicieron uso de algunas de las Leyes de la Simplicidad de John Maeda, entre las cuales se encuentran el Reducir, Organizar y Diferencias. Por un lado, en este prototipo buscamos reducir ciertas tareas o elementos que no aportan mucho al diseño con el fin de hacerlo más sencillo ya que como está orientado a niños pequeños, no debe de tener contenido innecesario que pueda distraerlos.</p>
-          <br>
-          <p>Por otro lado, buscamos organizar o mantener un patrón en ciertas pantallas como por ejemplo en las instrucciones de cómo jugar. Esto alineado al igual que el punto uno busca hacer mucho más sencillo la navegación de los usuarios y mejorar el entendimiento de las instrucciones. Por último, con la ley de diferencias buscamos generar en ciertas partes del videojuego "negativos" para mejorar la visibilidad de la información y del juego en general.</p>
+          <p>Para desarrollar este segundo prototipo se hicieron uso de algunas de las Leyes de la Simplicidad de John Maeda, entre las cuales se encuentran el Reducir, Organizar y Diferencias. Por un lado, en este prototipo buscamos reducir ciertas
+            tareas o elementos que no aportan mucho al diseño con el fin de hacerlo más sencillo ya que como está orientado a niños pequeños, no debe de tener contenido innecesario que pueda distraerlos.</p>
+          <p>Por otro lado, buscamos organizar o mantener un patrón en ciertas pantallas como por ejemplo en las instrucciones de cómo jugar. Esto alineado al igual que el punto uno busca hacer mucho más sencillo la navegación de los usuarios y
+            mejorar el entendimiento de las instrucciones. Por último, con la ley de diferencias buscamos generar en ciertas partes del videojuego "negativos" para mejorar la visibilidad de la información y del juego en general.</p>
         </div>
       </div>
-      <br><br>
       <hr>
       <br>
     </div>
